--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,7 +15,7 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "爱克来有几分",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "看你多爱克来",
@@ -31,7 +31,7 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
+  "text-level-1": "你不爱克来?",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
   "text-level-4": "您",
